@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH GPODDER "1" "March 2006" "gpodder 0.7-svn 2006-03-30" "User Commands"
+.TH GPODDER "1" "April 2006" "gpodder 0.7-svn 2006-03-30" "User Commands"
 .SH NAME
 gpodder \- manual page for gpodder 0.7-svn 2006-03-30
 .SH DESCRIPTION
