@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Fri Mar 31 18:26:27 2006
+# Generated on Tue Apr  4 00:22:39 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -94,6 +94,7 @@ class Gpodder(SimpleGladeApp):
     def new(self):
         if libgpodder.isDebugging():
             print "A new %s has been created" % self.__class__.__name__
+
         #self.gPodder.set_title( self.gPodder.get_title())
         #self.statusLabel.set_text( "Welcome to gPodder! Suggestions? Mail to: thp@perli.net")
         # set up the rendering of the comboAvailable combobox
@@ -170,6 +171,10 @@ class Gpodder(SimpleGladeApp):
                         gtk.gdk.ACTION_DEFAULT)
         self.main_widget.connect("drag_data_received", self.drag_data_received)
         self.wNotebook.connect("switch-page", self.switched_notebook)
+
+        # if we are running a SVN-based version, notify the user :)
+        if app_version.rfind( "svn") != -1:
+            self.showMessage( _("<b>gPodder development version %s</b>\nUse at your own risk, but also enjoy new features :)") % app_version)
     #-- Gpodder.new }
 
     #-- Gpodder custom methods {
